# nemo

./: .env.development  .envrc  .gitignore  .mcp.json  .otterignore  .tool-versions  CLAUDE.md  Cargo.toml  Otterfile  README.md  mkdocs.yml  pyproject.toml  tarpaulin.toml
.agentd/agents/: planner.yml  research.yml  reviewer.yml  triage.yml  worker.yml
.agentd/workflows/: issue-worker.yml  plan-worker.yml  pull-request-reviewer.yml  research-worker.yml  triage-worker.yml
.archive/: README.md
.archive/claude-agents/: 01-configuration-engine.md  02-component-registry.md  04-data-flow-engine.md  05-extension-manager.md
.claude/: settings.json
.claude/agents/: 00-application-shell.md  03-layout-engine.md  06-integration-gateway.md  07-event-bus.md  nemo-component-expert.md  nemo-configuration-expert.md  nemo-data-expert.md  nemo-extension-expert.md  nemo-gpui-bridge.md
.claude/commands/: nemo-add-component.md  nemo-add-data-source.md  nemo-add-example.md  nemo-add-plugin.md  nemo-run.md  nemo-test.md  nemo-validate-config.md  review-pr-feedback.md
.claude/skills/nemo-component-patterns/: SKILL.md
.github/: labels.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
assets/: AppIcon.icns  Info.plist.template  entitlements.plist
crates/nemo/: Cargo.toml
crates/nemo-bevy/: Cargo.toml
crates/nemo-bevy/src/: frame.rs  input.rs  lib.rs  renderer.rs
crates/nemo-config/: Cargo.toml
crates/nemo-config/src/: error.rs  lib.rs  loader.rs  location.rs  parser.rs  path.rs  registry.rs  resolver.rs  schema.rs  validator.rs  value.rs  xml_parser.rs
crates/nemo-data/: Cargo.toml
crates/nemo-data/src/: action.rs  binding.rs  error.rs  lib.rs  repository.rs  source.rs  transform.rs
crates/nemo-data/src/sources/: file.rs  http.rs  mod.rs  mqtt.rs  nats.rs  redis.rs  timer.rs  websocket.rs
crates/nemo-data/tests/: data_flow_integration.rs
crates/nemo-events/: Cargo.toml
crates/nemo-events/src/: bus.rs  event.rs  filter.rs  lib.rs  subscription.rs  trace.rs
crates/nemo-events/tests/: event_bus_integration.rs
crates/nemo-extension/: Cargo.toml
crates/nemo-extension/src/: error.rs  lib.rs  loader.rs  plugin.rs  registry.rs  rhai_engine.rs
crates/nemo-extension/tests/: extension_integration.rs
crates/nemo-integration/: Cargo.toml
crates/nemo-integration/src/: error.rs  http.rs  lib.rs  mqtt.rs  nats.rs  redis_pubsub.rs  websocket.rs
crates/nemo-layout/: Cargo.toml
crates/nemo-layout/src/: binding.rs  builder.rs  error.rs  lib.rs  manager.rs  node.rs  state.rs
crates/nemo-layout/tests/: layout_integration.rs
crates/nemo-macros/: Cargo.toml
crates/nemo-plugin/: Cargo.toml  README.md
crates/nemo-plugin-api/: Cargo.toml  README.md
crates/nemo-plugin-api/src/: lib.rs
crates/nemo-plugin/examples/: simple_plugin.rs
crates/nemo-plugin/src/: builder.rs  components.rs  containers.rs  lib.rs  value.rs
crates/nemo-registry/: Cargo.toml
crates/nemo-registry/src/: builtins.rs  descriptor.rs  error.rs  lib.rs  registry.rs
crates/nemo-storybook-generator/: Cargo.toml
crates/nemo-storybook-generator/src/: lib.rs  main.rs
crates/nemo-tui/: Cargo.toml
crates/nemo-tui/src/: app.rs  lib.rs  renderer.rs
crates/nemo-tui/src/components/: label.rs  mod.rs  panel.rs  progress.rs  stack.rs  table.rs  text.rs
crates/nemo-tui/tests/: components.rs
crates/nemo-ui/: Cargo.toml
crates/nemo-wasm/: Cargo.toml
crates/nemo-wasm-guest/: Cargo.toml  README.md  build.rs
crates/nemo-wasm-guest/src/: lib.rs
crates/nemo-wasm/src/: convert.rs  host_impl.rs  lib.rs
crates/nemo-wasm/wit/: nemo-plugin.wit
crates/nemo/src/: app.rs  args.rs  main.rs  runtime.rs  settings.rs  window.rs
crates/nemo/src/components/: accordion.rs  alert.rs  area_chart.rs  avatar.rs  badge.rs  bar_chart.rs  bevy_scene.rs  bubble_chart.rs  button.rs  candlestick_chart.rs  chart_utils.rs  checkbox.rs  clustered_bar_chart.rs  clustered_column_chart.rs  code_editor.rs  collapsible.rs  column_chart.rs  dropdown_button.rs  funnel_chart.rs  heatmap_chart.rs  icon.rs  image.rs  input.rs  label.rs  line_chart.rs  list.rs  mod.rs  modal.rs  notification.rs  panel.rs  pie_chart.rs  progress.rs  pyramid_chart.rs  radar_chart.rs  radio.rs  realtime_chart.rs  scatter_chart.rs  select.rs  sidenav_bar.rs  slider.rs  (+15 more)
crates/nemo/src/config/: app.rs  mod.rs  recent.rs
crates/nemo/src/storybook/: inspector.rs  mod.rs
crates/nemo/src/theme/: catppuccin-macchiato.json  catppuccin.json  kanagawa.json  nord.json  theme.rs
crates/nemo/src/workspace/: default_view.rs  footer_bar.rs  header_bar.rs  layout.rs  main_view.rs  mod.rs  project_loader.rs  settings.rs  utils.rs
crates/nemo/src/workspace/pages/: main_page.rs  mod.rs  project_loader.rs  settings.rs
crates/nemo/tests/: nemo_component_macro.rs
docs/: index.md
docs/archive/: BUILD-PROMPT.txt  ORCHESTRATION-PROMPT.md
docs/planning/: nemo-code-review.md  nemo-project-vision.md  nemo-system-architecture.md
docs/public/: architecture.md  cli.md  configuration.md  develop.md  getting-started.md  index.md  plugins.md
examples/: app.hcl  config.toml
examples/basic/: README.md  app.hcl  app.xml
examples/calculator/: README.md  app.hcl  app.xml
examples/complete/: app.xml
examples/components/: README.md  app.hcl  app.xml
examples/data-binding/: README.md  app.hcl  app.xml  docker-compose.yml
examples/data-streaming/: README.md  app.hcl  app.xml  docker-compose.yml
examples/data-streaming/service/: Cargo.toml  Dockerfile
examples/data-streaming/service/src/: main.rs
examples/pid-control/: app.hcl  app.xml
examples/scripts/: handlers.rhai
examples/tui-basic/: app.xml
plugins/demo-settings/: Cargo.toml
plugins/mock-data/: Cargo.toml
plugins/mock-data-wasm/: Cargo.toml
plugins/pid-control/: Cargo.toml
plugins/streaming-stats/: Cargo.toml
schema/: nemo.xsd
scripts/: bundle-macos.sh  prepare-data-bundle.sh
ui/: .env.development  .gitignore  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
ui/src/: App.test.tsx  App.tsx  index.css
(+63 files in other folders)
