[package]
name = "nemo-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hcl-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
regex = "1"

[dev-dependencies]
proptest = "1"
