[package]
name = "nemo-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nemo-config = { workspace = true }
nemo-events = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
