[package]
name = "nemo-extension"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nemo-config = { workspace = true }
nemo-registry = { workspace = true }
nemo-data = { workspace = true }
nemo-events = { workspace = true }
nemo-plugin-api = { workspace = true }
rhai = { workspace = true }
libloading = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
