[package]
name = "nemo-integration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nemo-config = { workspace = true }
nemo-data = { workspace = true }
nemo-events = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
rumqttc = { workspace = true }
redis = { workspace = true }
async-nats = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
