[package]
name = "nemo-layout"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nemo-config = { workspace = true }
nemo-registry = { workspace = true }
nemo-events = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
