[package]
name = "nemo-plugin-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
