[package]
name = "nemo-plugin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Stable API interface for Nemo native plugins"
readme = "README.md"
keywords = ["nemo", "plugin", "api", "dashboard"]
categories = ["gui"]

[dependencies]
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
