[package]
name = "nemo-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nemo-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
