[package]
name = "nemo-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nemo-ui = { workspace = true }
nemo-config = { workspace = true }
nemo-layout = { workspace = true }
nemo-data = { workspace = true }
nemo-events = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
