[package]
name = "nemo-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nemo-plugin-api = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
