[package]
name = "nemo"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nemo"
path = "src/main.rs"

[dependencies]
nemo-config = { workspace = true }
nemo-registry = { workspace = true }
nemo-layout = { workspace = true }
nemo-data = { workspace = true }
nemo-extension = { workspace = true }
nemo-integration = { workspace = true }
nemo-events = { workspace = true }
nemo-plugin-api = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
