[package]
name = "nemo"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nemo"
path = "src/main.rs"

[dependencies]
nemo-config = { workspace = true }
nemo-registry = { workspace = true }
nemo-layout = { workspace = true }
nemo-data = { workspace = true }
nemo-extension = { workspace = true, features = ["wasm"] }
nemo-integration = { workspace = true }
nemo-events = { workspace = true }
nemo-plugin-api = { workspace = true }
nemo-macros = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
